:memo: Adds introduction to report #2 #3

--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -4,7 +4,7 @@
 {\large\bfseries Título \\ Subtítulo }\\
 \end{center}
 \begin{center}
-Nombre Del Estudiante\\
+Francisco Javier Bolívar Expósito\\
 \end{center}
 
 %\vspace{0.7cm}
@@ -22,7 +22,7 @@ Nombre Del Estudiante\\
 	{\large\bfseries Same, but in English}\\
 \end{center}
 \begin{center}
-	Student's name\\
+	Francisco Javier Bolívar Expósito\\
 \end{center}
 \vspace{0.5cm}
 \noindent{\textbf{Keywords}: \textit{open source}, \textit{floss}
