--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -3,25 +3,14 @@
     title        = {{GNU} {G}eneral {P}ublic {L}icense},
     version      = {3},
 	howpublished = {\url{http://www.gnu.org/licenses/gpl.html}},
-    shorthand    = {GPL},
+    shorthand    = {GPL}
 }
 
-@misc{web-server-usage,
-	author       = {w3tech},
-	title        = {Usage of web servers for websites},
-	howpublished = {\url{https://w3techs.com/technologies/overview/web_server/all}}
-}
 
 @misc{apache,
 	author       = {Apache Software Foundation},
 	title        = {Apache Software Foundation},
 	howpublished = {\url{http://www.apache.org/}}
-}
-
-@misc{nodejs-trend,
-	author       = {w3tech}, 
-	title        = {Usage statistics and market share of Node.js for websites},
-	howpublished = {\url{https://w3techs.com/technologies/details/ws-nodejs/all/all}}
 }
 
 @misc{acid,
@@ -40,18 +29,6 @@
 	author       = {Pug}, 
 	title        = {Pug template engine},
 	howpublished = {\url{https://github.com/pugjs/pug}}
-}
-
-@misc{jade,
-	author       = {Jade}, 
-	title        = {Jade Lang},
-	howpublished = {\url{jade-lang.com}}
-}
-
-@misc{bootstrap,
-	author       = {Bootstrap}, 
-	title        = {Bootstrap},
-	howpublished = {\url{https://getbootstrap.com/}}
 }
 
 @misc{hack-week,
@@ -120,149 +97,6 @@
 	bookTitle = {Software Engineering},
 	year = 2016,
 	publisher = {Springer International Publishing},
-	isbn = {0-321-31379-8},
+	isbn = {0-321-31379-8}
 }
-
-@misc{nodejs,
-	author       = {Node.js Foundation}, 
-	title        = {Node.js},
-	howpublished = {\url{https://nodejs.org/es/}}
-}
-
-@misc{npm,
-	author       = {npm, Inc.}, 
-	title        = {Build amazing things},
-	howpublished = {\url{https://www.npmjs.com/}}
-}
-
-@misc{carbone,
-	author       = {Carbone}, 
-	title        = {Carbone},
-	howpublished = {\url{https://carbone.io/designer-documentation.html}}
-}
-
-@misc{canvas,
-	author       = {w3schools}, 
-	title        = {HTML5 Canvas},
-	howpublished = {\url{https://www.w3schools.com/html/html5_canvas.asp}}
-}
-
-@misc{supertest,
-	author       = {visionmedia}, 
-	title        = {Super-agent driven library for testing node.js HTTP servers using a fluent API},
-	howpublished = {\url{https://github.com/visionmedia/supertest}}
-}
-
-@misc{travis-ci,
-	author       = {Travis CI}, 
-	title        = {Test and Deploy with Confidence},
-	howpublished = {\url{https://travis-ci.org/}}
-}
-
-@misc{ubuntu-usage,
-	author       = {w3techs}, 
-	title        = {Usage statistics and market share of Linux for websites},
-	howpublished = {\url{https://w3techs.com/technologies/details/os-linux/all/all}}
-}
-
-@misc{gespol,
-	author       = {GESPOL}, 
-	title        = {GESPOL Security and Safety Systems},
-	howpublished = {\url{http://bilbo2.servebbs.net:9980/gespolweb/index.php/}}
-}
-
-@misc{appolo,
-	author       = {almerimatik}, 
-	title        = {Appolo, aplicación integral para Cuerpos de Policía Local},
-	howpublished = {\url{http://www2.almerimatik.es/appolo/}}
-}
-
-@misc{scrum,
-	author       = {Scrum Manager}, 
-	title        = {Troncal I. Scrum Master},
-	howpublished = {\url{http://scrummanager.net/files/scrum_manager.pdf}}
-}
-
-@misc{vagrant,
-	author       = {HashiCorp}, 
-	title        = {Development Environments Made Easy},
-	howpublished = {\url{https://www.vagrantup.com/}}
-}
-
-@misc{passport-func,
-	author       = {centuryLink}, 
-	title        = {Authentication with passport.js},
-	howpublished = {\url{https://www.ctl.io/developers/blog/post/build-user-authentication-with-node-js-express-passport-and-mongodb}}
-}
-
-@misc{image-unit-test,
-	author       = {Martin Fowler}, 
-	title        = {Unit test},
-	howpublished = {\url{https://martinfowler.com/bliki/UnitTest.html}}
-}
-
-@misc{image-ci,
-	author       = {FileCatalyst}, 
-	title        = {Continuous integration diagram},
-	howpublished = {\url{http://filecatalyst.com/wp-content/uploads/2014/12/Continuous-Integration-Diagram.png}}
-}
-
-@misc{image-node,
-	author       = {Belisoft}, 
-	title        = {PHP vs Nodejs},
-	howpublished = {\url{https://belitsoft.com/php-development-services/php7-vs-nodejs}}
-}
-
-@misc{image-node-arch,
-	author       = {Codeburst}, 
-	title        = {All about Node.js},
-	howpublished = {\url{https://codeburst.io/all-about-node-js-you-wanted-to-know-25f3374e0be7}}
-}
-
-@misc{image-mongoose,
-	author       = {Medium}, 
-	title        = {Introduction to Mongoose},
-	howpublished = {\url{https://medium.freecodecamp.org/introduction-to-mongoose-for-mongodb-d2a7aa593c57}}
-}
-
-@misc{image-vagrant,
-	author       = {Czerasz}, 
-	title        = {Vagrant workflow},
-	howpublished = {\url{http://czerasz.com/2015/01/06/vagrant-workflows/}}
-}
-
-@misc{image-ansible,
-	author       = {RoyalCyber}, 
-	title        = {Automation with Ansible},
-	howpublished = {\url{http://blog.royalcyber.com/devops/new-level-of-automation-with-ansible/}}
-}
-
-@misc{,
-	author       = {}, 
-	title        = {},
-	howpublished = {\url{}}
-}
-
-@misc{,
-	author       = {}, 
-	title        = {},
-	howpublished = {\url{}}
-}
-
-@misc{,
-	author       = {}, 
-	title        = {},
-	howpublished = {\url{}}
-}
-
-@misc{,
-	author       = {}, 
-	title        = {},
-	howpublished = {\url{}}
-}
-
-
-
-
-
 
