--- a/doc/portada/portada.tex
+++ b/doc/portada/portada.tex
@@ -12,9 +12,9 @@
 \textsc{ \Large TRABAJO FIN DE GRADO\\[0.2cm]}
 \textsc{ GRADO EN INGENIERIA INFORMATICA}\\[1cm]
 
-{\Huge\bfseries Título \\}
+{\Huge\bfseries UltraStar: Song to txt \\}
 \noindent\rule[-1ex]{\textwidth}{3pt}\\[3.5ex]
-{\large\bfseries Subtítulo }
+{\large\bfseries Creación automática de archivos para Karaoke}
 \end{minipage}
 
 \vspace{2.5cm}
@@ -22,11 +22,11 @@
 \begin{minipage}{\textwidth}
 \centering
 
-\textbf{Autor}\\ {Estudiante}\\[2.5ex]
-\textbf{Director}\\ {Tutor(a)(es)}\\[2cm]
+\textbf{Autor}\\ {Francisco Javier Bolívar Expósito}\\[2.5ex]
+\textbf{Director}\\ {Juan Julián Merelo Guervós}\\[2cm]
 \includegraphics[width=0.3\textwidth]{logos/etsiit_logo.png}\\[0.1cm]
 \textsc{Escuela Técnica Superior de Ingenierías Informática y de Telecomunicación}\\
 \textsc{---}\\
-Granada, Junio de 201x
+Granada, Junio de 2022
 \end{minipage}
 \end{titlepage}
