:memo: Fixes spelling in the introduction #2 #3
+ "vídeo juegos" -> videojuegos
+ Removes arbitrary capitalisation
+ Video game names now use official capitalisation and italics

--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -4,7 +4,7 @@ Este proyecto es software libre, y está liberado con la licencia AGPLv3\cite{ag
 
 \section{Motivación}
 
-Existen varios vídeo juegos de Karaoke de software libre con cierta popularidad (\href{https://github.com/UltraStar-Deluxe/USDX}{usdx}, \href{https://github.com/Vocaluxe/Vocaluxe}{vocaluxe}, \href{https://github.com/performous/performous}{performous}, ...) donde los jugadores consiguen puntos haciendo coincidir al cantar su tono con el de la canción original.
+Existen varios videojuegos de Karaoke de software libre con cierta popularidad (\href{https://github.com/UltraStar-Deluxe/USDX}{\textit{UltraStar Deluxe}}, \href{https://github.com/Vocaluxe/Vocaluxe}{\textit{Vocaluxe}}, \href{https://github.com/performous/performous}{\textit{Performous}}, ...) donde los jugadores consiguen puntos haciendo coincidir al cantar su tono con el de la canción original.
 
 Para añadir una canción es necesario crear un archivo de texto con un formato estándar (el de UltraStar) que contiene metadatos de la canción, la letra separada en fonemas y el segundo y tono en el que se canta cada fonema.
 
@@ -14,7 +14,7 @@ Por este motivo, este trabajo pretende la creación de herramientas que automati
 
 Estas herramientas serían de gran ayuda para agilizar el trabajo de los usuarios que ya crean canciones de forma regular y también para reducir la barrera de entrada y permitir a usuarios sin conocimiento musical añadir canciones.
 
-\section{Estado del Arte}
+\section{Estado del arte}
 
 Aunque el archivo de texto podría crearse a mano normalmente se hace con ayuda de programas dedicados. El proceso más cómodo es usando dos programas como se describe a continuación.
 
