:memo: Adds user analisis to report #5
+ Closes #5 by defining role-based personas in the report.

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -6,47 +6,11 @@
     shorthand    = {GPL}
 }
 
-
-@misc{apache,
-	author       = {Apache Software Foundation},
-	title        = {Apache Software Foundation},
-	howpublished = {\url{http://www.apache.org/}}
-}
-
-@misc{acid,
-	author       = {Graham Chen}, 
-	title        = {Distributed transaction processing standars and their applications},
-	howpublished = {\url{https://pdfs.semanticscholar.org/cf9d/45b49b276615e6c5d94a8ffaf163933c49a6.pdf}}
-}
-
-@misc{cap,
-	author       = {Eric Brewer}, 
-	title        = {Brewer's CAP Theorem},
-	howpublished = {\url{http://www.julianbrowne.com/article/brewers-cap-theorem}}
-}
-
-@misc{pug,
-	author       = {Pug}, 
-	title        = {Pug template engine},
-	howpublished = {\url{https://github.com/pugjs/pug}}
-}
-
-@misc{hack-week,
-	author       = {Twitter}, 
-	title        = {Hack Week},
-	howpublished = {\url{https://blog.twitter.com/engineering/en_us/a/2010/hack-week.html}}
-}
-
-@misc{json,
-	author       = {w3schools}, 
-	title        = {JavaScript Object Notation},
-	howpublished = {\url{https://www.w3schools.com/js/js_json_intro.asp}}
-}
-
-@misc{mongoose,
-	author       = {Mongoose}, 
-	title        = {Elegant mongodb object modeling for node.js},
-	howpublished = {\url{http://mongoosejs.com/}}
+@misc{role-personas,
+	author = {Heidi Adkisson},
+	title = {Creating Role-Based Personas for the Enterprise},
+	year = {2019},
+	howpublished = {\url{https://hpadkisson.medium.com/creating-role-based-personas-for-the-enterprise-6471e7060d82}}
 }
 
 @misc{agpl,
@@ -54,49 +18,3 @@
 	title        = {GNU Affero General Public License},
 	howpublished = {\url{https://www.gnu.org/licenses/agpl-3.0.html}}
 }
-
-@misc{ansible,
-	author       = {Ansible}, 
-	title        = {Automation for everyone},
-	howpublished = {\url{https://www.ansible.com/}}
-}
-
-@misc{passport,
-	author       = {Passport.js}, 
-	title        = {Simple, unobtrusive authentication for Node.js},
-	howpublished = {\url{http://www.passportjs.org/}}
-}
-
-@misc{express,
-	author       = {Express.js}, 
-	title        = {Fast, unopinionated, minimalist web framework for Node.js},
-	howpublished = {\url{http://expressjs.com/}}
-}
-
-@misc{blowfish,
-	author       = {Bruce Schneier}, 
-	title        = {Schneier on Security},
-	howpublished = {\url{https://www.schneier.com/academic/blowfish/}}
-}
-
-@misc{rainbow,
-	author       = {Philippe Oechslin}, 
-	title        = {Making a Faster Cryptanalytical Time-Memory Trade-Off},
-	howpublished = {\url{https://lasec.epfl.ch/~oechslin/publications/crypto03.pdf}}
-}
-
-@misc{gdpr,
-	author       = {European Union}, 
-	title        = {General Data Protection Regulation},
-	howpublished = {\url{https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=OJ:L:2016:119:FULL&from=EN}}
-}
-
-@inbook{software-engineering,
-	author = {Ian Sommervile},
-	title = {Software Engineering},
-	bookTitle = {Software Engineering},
-	year = 2016,
-	publisher = {Springer International Publishing},
-	isbn = {0-321-31379-8}
-}
-
