--- a/doc/secciones/04_planificacion.tex
+++ b/doc/secciones/04_planificacion.tex
@@ -2,6 +2,40 @@
 
 \section{Metodología utilizada}
 
+\section{Análisis de usuarios}
+
+Para empatizar con los usuarios que acabarán usando el proyecto es necesario definirlos claramente, pudiendo así enfocar el proyecto a resolver sus problemas.
+
+Con esta intención, utilizando la metodología de personas basadas en roles \cite{role-personas}, se han definido los siguientes roles que describen a un grupo de personas que realizan la misma función.
+
+\begin{enumerate}	
+	\item{Miembro del tribunal}
+	\begin{itemize}
+		\item{Misión: Evaluar los actos de defensa y los informes presentados en los trabajos de fin de grado, teniendo en cuenta si estas muestran que el estudiante ha desarrollado las técnicas y habilidades propias para obtener el título de grado.}
+		\item{Nivel de conocimiento: No se pueden hacer suposiciones sobre las habilidades de un miembro del tribunal, según su rama de conocimiento pueden tener un conocimiento altamente avanzado sobre los temas tratados o uno muy básico.}
+		\item{Contexto en el que realiza la función: La función es parte de su trabajo. Para la evaluación del acto de defensa prestan normalmente toda su atención, al leer la memoria también suele haber cierto nivel de concentración, aunque este puede ser menor al poder tener sobrecarga de obligaciones y estrés.}
+		\item{Productos de los que es usuario: Informe y el acto de defensa.}
+	\end{itemize}
+	
+	\item{Creador de canciones para videojuegos de karaoke}
+	\begin{itemize}
+		\item{Misión: Adaptar canciones para poder utilizarlas en los videojuegos de karaoke.}
+		\item{Nivel de conocimiento: Manejo medio de ordenadores de escritorio. Importante diferenciar entre aquellos que tienen conocimientos musicales y los que no.}
+		\item{Contexto en el que realiza la función: Usando su tiempo libre, por lo que pueden dejarla a medias o tener un tiempo limitado para hacerla.}
+		\item{Productos de los que es usuario: Las aplicaciones desarrolladas.}
+	\end{itemize}
+	
+		\item{Programador}
+	\begin{itemize}
+		\item{Misión: Desarrollar con el código del proyecto, ya sea contribuyendo a este o reutilizando partes en otros proyectos.}
+		\item{Nivel de conocimiento: Conocimiento experto sobre herramientas de desarrollo y colaboración.}
+		\item{Contexto en el que realiza la función: Puede ser un su tiempo libre o como parte de sus tareas, pero suele ser con cierta dedicación sin hacer otras tareas a la vez.}
+		\item{Producto de los que es usuario: La organización del proyecto, el código de este y la documentación.}
+	\end{itemize}
+\end{enumerate}
+
+
+
 
 \section{Temporización}
 
