:construction_worker: Updates LaTeX checks for taking into account text language #14
Now spanish checks ignore other languages, and the english abstract is moved into a different file and checked on other steps of the github action.

--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -10,26 +10,15 @@ Francisco Javier Bolívar Expósito\\
 %\vspace{0.7cm}
 
 \vspace{0.5cm}
-\noindent{\textbf{Palabras clave}: \textit{software libre}
+\noindent\textbf{Palabras clave}: \textit{software libre}
 \vspace{0.7cm}
 
-\noindent{\textbf{Resumen}\\
+\noindent\textbf{Resumen}\\
 	
 
 \cleardoublepage
 
-\begin{center}
-	{\large\bfseries Same, but in English}\\
-\end{center}
-\begin{center}
-	Francisco Javier Bolívar Expósito\\
-\end{center}
-\vspace{0.5cm}
-\noindent{\textbf{Keywords}: \textit{open source}, \textit{floss}
-\vspace{0.7cm}
-
-\noindent{\textbf{Abstract}\\
-
+\input{prefacios/english_abstract}
 
 \cleardoublepage
 
