:memo: Clarify hardware and OS used by song creators #5

--- a/doc/secciones/04_planificacion.tex
+++ b/doc/secciones/04_planificacion.tex
@@ -20,7 +20,7 @@ Con esta intención, utilizando la metodología de personas basadas en roles \ci
 	\item{Creador de canciones para videojuegos de karaoke}
 	\begin{itemize}
 		\item{Misión: Adaptar canciones para poder utilizarlas en los videojuegos de karaoke.}
-		\item{Nivel de conocimiento: Manejo medio de ordenadores de escritorio. Importante diferenciar entre aquellos que tienen conocimientos musicales y los que no.}
+		\item{Nivel de conocimiento: Manejo medio de ordenadores, el sistema operativo que usan en estos puede ser \textit{Windows}, \textit{Linux} o \textit{macOs}. Importante diferenciar entre aquellos que tienen conocimientos musicales y los que no.}
 		\item{Contexto en el que realiza la función: Usando su tiempo libre, por lo que pueden dejarla a medias o tener un tiempo limitado para hacerla.}
 		\item{Productos de los que es usuario: Las aplicaciones desarrolladas.}
 	\end{itemize}
