:pencil2: Fix remaining spell errors

--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -1,10 +1,13 @@
 \thispagestyle{empty}
 
 \begin{center}
-{\large\bfseries Título \\ Subtítulo }\\
+\large\bfseries
+Título
+
+Subtítulo 
 \end{center}
 \begin{center}
-Francisco Javier Bolívar Expósito\\
+Francisco Javier Bolívar Expósito
 \end{center}
 
 %\vspace{0.7cm}
@@ -13,7 +16,7 @@ Francisco Javier Bolívar Expósito\\
 \noindent\textbf{Palabras clave}: \textit{software libre}
 \vspace{0.7cm}
 
-\noindent\textbf{Resumen}\\
+\noindent\textbf{Resumen}
 	
 
 \cleardoublepage
@@ -26,7 +29,7 @@ Francisco Javier Bolívar Expósito\\
 
 \noindent\rule[-1ex]{\textwidth}{2pt}\\[4.5ex]
 
-D. \textbf{Tutora/e(s)}, Profesor(a) del ...
+D. \textbf{Juan Julián Merelo Guervós}, Profesor del departamento de Arquitectura y Tecnología de Computadores.
 
 \vspace{0.5cm}
 
@@ -34,13 +37,13 @@ D. \textbf{Tutora/e(s)}, Profesor(a) del ...
 
 \vspace{0.5cm}
 
-Que el presente trabajo, titulado \textit{\textbf{Chief}},
-ha sido realizado bajo mi supervisión por \textbf{Estudiante}, y autorizo la defensa de dicho trabajo ante el tribunal
+Que el presente trabajo, titulado \textit{\textbf{UltraStar: Song to txt}},
+ha sido realizado bajo mi supervisión por \textbf{Francisco Javier Bolívar Expósito}, y autorizo la defensa de dicho trabajo ante el tribunal
 que corresponda.
 
 \vspace{0.5cm}
 
-Y para que conste, expiden y firman el presente informe en Granada a Junio de 2022.
+Y para que conste, expiden y firman el presente informe en Granada a junio de 2022.
 
 \vspace{1cm}
 
@@ -48,7 +51,7 @@ Y para que conste, expiden y firman el presente informe en Granada a Junio de 20
 
 \vspace{5cm}
 
-\noindent \textbf{(nombre completo tutor/a/es)}
+\noindent \textbf{Juan Julián Merelo Guervós}
 
 \chapter*{Agradecimientos}
 
