--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -1,6 +1,6 @@
 \chapter{Introducción}
 
-Este proyecto es software libre, y está liberado con la licencia AGPLv3\cite{agpl}.
+Este proyecto es software libre, y está liberado con la licencia AGPLv3 \cite{agpl}.
 
 \section{Motivación}
 
@@ -12,7 +12,7 @@ Un tipo de estos programas son los videojuegos de karaoke, que ofrecen todavía 
 
 Sin embargo, los aficionados de los videojuegos de karaoke tienen que lidiar frecuentemente con un problema cuando quieren cantar su canción favorita: que no esté disponible.
 
-Aunque el desarrollo de programas de software libre y gratuitos tanto de videojuegos de karaoke (\href{https://github.com/UltraStar-Deluxe/USDX}{\textit{UltraStar Deluxe}}, \href{https://github.com/Vocaluxe/Vocaluxe}{\textit{Vocaluxe}}, \href{https://github.com/performous/performous}{\textit{Performous}}, ...) como de herramientas para la creación de canciones (\href{https://github.com/sarutasan72/Yass}{\textit{Yass}}, \href{https://github.com/UltraStar-Deluxe/UltraStar-Creator}{\textit{UltraStar Creator}}, ...) ha ayudado al desarrollo de comunidades donde se crean y comparten canciones para videojuegos de karaoke, la mayoría de canciones siguen sin estar disponibles, especialmente aquellas más recientes o menos famosas.
+Aunque el desarrollo de programas de software libre y gratuitos tanto de videojuegos de karaoke (\href{https://github.com/UltraStar-Deluxe/USDX}{\textit{UltraStar Deluxe}}, \href{https://github.com/Vocaluxe/Vocaluxe}{\textit{Vocaluxe}}, \href{https://github.com/performous/performous}{\textit{Performous}}...) como de herramientas para la creación de canciones (\href{https://github.com/sarutasan72/Yass}{\textit{Yass}}, \href{https://github.com/UltraStar-Deluxe/UltraStar-Creator}{\textit{UltraStar Creator}}...) ha ayudado al desarrollo de comunidades donde se crean y comparten canciones para videojuegos de karaoke, la mayoría de canciones siguen sin estar disponibles, especialmente aquellas más recientes o menos famosas.
 
 Una causa de que la selección de canciones disponibles sea tan limitada es que el proceso de creación de canciones para videojuegos de karaoke es complejo, largo y requiere conocimientos musicales.
 
@@ -22,4 +22,4 @@ Una causa de que la selección de canciones disponibles sea tan limitada es que 
 Este trabajo persigue ayudar en la creación de canciones para videojuegos de karaoke, reduciendo la barrera de entrada para personas sin conocimientos musicales y el tiempo que necesitan invertir aquellas con conocimientos musicales.
 
 
-Para ello se pretende \textbf{crear una herramienta que permita automatizar la creación de canciones para videojuegos de karaoke.}
+Para ello se pretende \textbf{desarrollar una herramienta que permita automatizar la creación de canciones para videojuegos de karaoke.}
