--- a/doc/portada/portada.tex
+++ b/doc/portada/portada.tex
@@ -9,11 +9,16 @@
 \centering
 \includegraphics[width=0.9\textwidth]{logos/logo_ugr.jpg}\\[1.4cm]
 
-\textsc{ \Large TRABAJO FIN DE GRADO\\[0.2cm]}
-\textsc{ GRADO EN INGENIERIA INFORMATICA}\\[1cm]
+\textsc{ \Large TRABAJO FIN DE GRADO}
+\vspace{0.2cm}
+
+\textsc{ GRADO EN INGENIERÍA INFORMÁTICA}
+\vspace{1cm}
 
 {\Huge\bfseries UltraStar: Song to txt \\}
-\noindent\rule[-1ex]{\textwidth}{3pt}\\[3.5ex]
+\noindent\rule[-1ex]{\textwidth}{3pt}
+
+\vspace{3.5ex}
 {\large\bfseries Creación automática de archivos para Karaoke}
 \end{minipage}
 
@@ -22,11 +27,19 @@
 \begin{minipage}{\textwidth}
 \centering
 
-\textbf{Autor}\\ {Francisco Javier Bolívar Expósito}\\[2.5ex]
-\textbf{Director}\\ {Juan Julián Merelo Guervós}\\[2cm]
+\textbf{Autor} 
+
+{Francisco Javier Bolívar Expósito}
+\vspace{2.5ex}
+
+\textbf{Director} 
+
+{Juan Julián Merelo Guervós}
+\vspace{2cm}
+
 \includegraphics[width=0.3\textwidth]{logos/etsiit_logo.png}\\[0.1cm]
 \textsc{Escuela Técnica Superior de Ingenierías Informática y de Telecomunicación}\\
 \textsc{---}\\
-Granada, Junio de 2022
+Granada, junio de 2022
 \end{minipage}
 \end{titlepage}
