--- a/doc/prefacios/english_abstract.tex
+++ b/doc/prefacios/english_abstract.tex
@@ -2,15 +2,15 @@
 
 
 \begin{center}
-	{\large\bfseries Same, but in English}\\
+	{\large\bfseries Same, but in English}
 \end{center}
 \begin{center}
-	Student's name\\
+	Student's name
 \end{center}
 \vspace{0.5cm}
 \noindent\textbf{Keywords}: \textit{open source}, \textit{floss}
 \vspace{0.7cm}
 
-\noindent\textbf{Abstract}\\
+\noindent\textbf{Abstract}
 
 \end{otherlanguage}
