Defines project objective more precisely. #9

--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -22,4 +22,4 @@ Una causa de que la selección de canciones disponibles sea tan limitada es que 
 Este trabajo persigue ayudar en la creación de canciones para videojuegos de karaoke, reduciendo la barrera de entrada para personas sin conocimientos musicales y el tiempo que necesitan invertir aquellas con conocimientos musicales.
 
 
-Para ello se pretende \textbf{desarrollar una herramienta que permita automatizar la creación de canciones para videojuegos de karaoke.}
+Para ello se pretende \textbf{mejorar o integrar los procesos de automatización existentes para la creación de canciones para videojuegos de karaoke.}
