:memo: Completes planning chapter in the report #15
+ Closes #15 by defining the development methodology and including the planning done in the report

Adds the following sections:
+ Overview of agile development
+ Source control
+ User stories
+ Milestones
+ Quality control
+ Summary of methodology
+ Cost estimation

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -18,3 +18,33 @@
 	title        = {GNU Affero General Public License},
 	howpublished = {\url{https://www.gnu.org/licenses/agpl-3.0.html}}
 }
+
+@book{hujj,
+	author       = {Juan Julián Merelo Guervós},
+	title        = {Calidad en una aplicación desde el diseño},
+	publisher = {\url{https://jj.github.io/curso-tdd/temas/dise%C3%B1o.html}},
+	year      = {2022}
+}
+
+@book{agiljj,
+	author       = {Juan Julián Merelo Guervós},
+	title        = {Desarrollo ágil},
+	publisher = {\url{https://jj.github.io/curso-tdd/temas/%C3%A1gil.html}},
+	year      = {2022}
+}
+
+@misc{beck2001agile,
+  added-at = {2007-12-30T11:39:05.000+0100},
+  author = {Beck, Kent and Beedle, Mike and van Bennekum, Arie and Cockburn, Alistair and Cunningham, Ward and Fowler, Martin and Grenning, James and Highsmith, Jim and Hunt, Andrew and Jeffries, Ron and Kern, Jon and Marick, Brian and Martin, Robert C. and Mellor, Steve and Schwaber, Ken and Sutherland, Jeff and Thomas, Dave},
+  biburl = {https://www.bibsonomy.org/bibtex/28954248a545d88dd2c0e688d1c7e2f9d/juve},
+  booktitle = {Manifesto for Agile Software Development},
+  description = {Manifesto for Agile Software Development},
+  interhash = {098cc7e185f10c3da390459a01e0d535},
+  intrahash = {8954248a545d88dd2c0e688d1c7e2f9d},
+  keywords = {imported},
+  timestamp = {2007-12-30T11:39:05.000+0100},
+  title = {Manifesto for Agile Software Development},
+  url = {http://www.agilemanifesto.org/},
+  year = {2001}
+}
+
